--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/jsbn": "^1.2.33",
     "bn.js": "^4.12.1",
-    "elliptic": "^6.6.1"
+    "elliptic": "^6.6.1",
+    "jsbn": "^1.1.0"
   }
 }
