--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "jest-console-reporter": "^0.1.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@types/jsbn": "^1.2.33",
+    "bn-sqrt": "^1.0.0",
     "bn.js": "^4.12.1",
     "elliptic": "^6.6.1",
-    "jsbn": "^1.1.0"
+    "jsbn": "^1.1.0",
+    "sjcl": "^1.0.8",
+    "winston": "^3.17.0"
   }
 }
